# Simple3DGame

./: CMakeLists.txt  main.cpp
Application/: Application.cpp  Application.h
Dispose/: IDisposable.h
Error/: Error.cpp  Error.h
Game/: Game.cpp  Game.h  GameDefaults.h  GameObject.cpp  GameObject.h
Game/Camera/: Camera.cpp  Camera.h
Game/GameObject/: GameObject.cpp  GameObject.h  GameObjectDefaults.h
Game/Input/: Input.cpp  Input.h
Game/Objects/Cube/: Cube.cpp  Cube.h
Game/Objects/Rectangle/: Rectangle.cpp  Rectangle.h
Game/Scene/: Scene.cpp  Scene.h
Game/Screen/: Screen.cpp  Screen.h
Game/Shader/: Shader.cpp  Shader.h
Game/Shader/Shaders/: Shader.vert  shader.frag  shader.vert
Game/Texture/: Texture2D.cpp  Texture2D.h
Game/Time/: Time.cpp  Time.h
